--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,8 @@
 AC_INIT(fido2-ctap-gadget, 0.0.1, <James.Bottomley@HansenPartnership.com>)
 AM_INIT_AUTOMAKE([foreign 1.6])
 
+AC_CHECK_PROGS([HELP2MAN], [help2man])
+
 AC_PROG_CC_STDC
 AC_USE_SYSTEM_EXTENSIONS
 AC_SYS_LARGEFILE
