hidgd: add certificate to registration message
Signed-off-by: James Bottomley <James.Bottomley@HansenPartnership.com>

--- a/hidgd.1.in
+++ b/hidgd.1.in
@@ -3,4 +3,6 @@ hidgd - hid gadget daemon
 
 [description]
 
-Handles the hidg end of a FIDO2 device
+Handles the hidg end of a FIDO2 device.  Note that the certificate
+file is simply placed straight into the register reply and therefore
+must be correctly DER encoded.
