hidgd: add TPM functions to give correct registration
Use the TPM to obtain a static EC key at 81000101 as the public point
and signature for registration.  We assume the DER certificate is a
signed version of this.  Currently, I'm just using a self signed
certificate which the webauthn demo site seems to accept.

https://webauthn.org/

This commit of code passes registration, but obviously not login
because signing is currently unimplemented.

Signed-off-by: James Bottomley <James.Bottomley@HansenPartnership.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,9 +4,12 @@ man1_MANS=hidgd.1
 
 fido_SOURCES=fido.c
 
-hidgd_SOURCES=hidgd.c u2f.h u2f_hid.h
-
 AM_CFLAGS=-Wall -Werror
+
+hidgd_SOURCES=hidgd.c u2f.h u2f_hid.h tpm.c hidgd-tpm.h
+hidgd_CFLAGS=-I@TSSINCLUDE@ ${CRYPTO_CFLAGS} ${AM_CFLAGS}
+hidgd_LDADD=${CRYPTO_LIBS}
+
 
 $(builddir)/%.1: $(srcdir)/%.1.in $(top_builddir)/%
 	$(HELP2MAN) --no-info -i $< -o $@ $(top_builddir)/$*
