crypto: make certificate key an openssl one and split out crypto processing
The certificate key is really only used for an attestation and doesn't
necessarily need TPM protection, so make it an openssl key for now
(potentially later adding the engine).

Signed-off-by: James Bottomley <James.Bottomley@HansenPartnership.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ fido_SOURCES=fido.c
 
 AM_CFLAGS=-Wall -Werror
 
-hidgd_SOURCES=hidgd.c u2f.h u2f_hid.h tpm.c hidgd-tpm.h
+hidgd_SOURCES=hidgd.c u2f.h u2f_hid.h tpm.c hidgd-tpm.h crypto.c
 hidgd_CFLAGS=-I@TSSINCLUDE@ ${CRYPTO_CFLAGS} ${AM_CFLAGS}
 hidgd_LDADD=${CRYPTO_LIBS}
 
